--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,21 +1,21 @@
 //---------- VARIABLES ----------//
 
-// 9, 10, 11, 12, 14, 16, 16, 21, 24, 36, 48, 60, 72
+// Fonts
 
 $font-family: 'Lato';
 $font-family-fallback: sans-serif;
-$font-size: 1em;
+$font-size: 16px;
 $font-weight: 400;
 
 $line-height: 1.5em;
 
 $font-family-headings: 'Lato';
-$font-size-h1: 2em;
-$font-size-h2: 1.5em;
-$font-size-h3: 1.25em;
-$font-size-h4: 1em;
-$font-size-h5: .75em;
-$font-size-h6: .5em;
+$font-size-h1: 32px;
+$font-size-h2: 24px;
+$font-size-h3: 20px;
+$font-size-h4: 16px;
+$font-size-h5: 14px;
+$font-size-h6: 12px;
 $font-weight-headings: 700;
 
 $font-size-headings: (
@@ -30,19 +30,29 @@ $font-size-headings: (
 $font-family-code: 'Courier New';
 $font-family-code-fallback: monospace;
 
+// Spacing
+
 $margin-element-bottom: 3em;
+
+// Adjustments
 
 $amount: 10%;
 
 $rtl: false;
 
+// Grid
+
 $grid-columns: 12;
 $grid-gutter: 2%;
 
+// Media Queries
+
 $media-tiny: 480px; // 30
-$media-small: 767px; // 48
-$media-medium: 1024px; //64
+$media-small: 640px; // 40
+$media-medium: 960px; //60
 $media-large: 1248px; // 78
+
+// Paths
 
 $path-fonts: '../fonts';
 $path-htc: 'htc';
