remove htc polyfills

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -47,13 +47,12 @@ $grid-gutter: 2%;
 
 // Media Queries
 
-$media-tiny: 480px; // 30
-$media-small: 640px; // 40
-$media-medium: 960px; //60
-$media-large: 1248px; // 78
+$media-tiny: 480px;
+$media-small: 640px;
+$media-medium: 960px;
+$media-large: 1248px;
 
 // Paths
 
 $path-fonts: '../fonts';
-$path-htc: 'htc';
 $path-img: '../img';
