relative breakpoints and variable grid-container width

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 $font-family: 'Lato';
 $font-family-fallback: sans-serif;
-$font-size: 16px;
+$font-size: 1em;
 $font-weight: 400;
 
 $line-height: 1.5em;
@@ -42,13 +42,14 @@ $rtl: false;
 
 $grid-columns: 12;
 $grid-gutter: 2%;
+$grid-container: 1248px;
 
 // Media Queries
 
-$media-tiny: 480px;
-$media-small: 640px;
-$media-medium: 960px;
-$media-large: 1248px;
+$media-tiny: 30em; // 480
+$media-small: 40em; // 640
+$media-medium: 60em; // 960
+$media-large: 78em; // 1248
 
 // Paths
 
