--- a/source/scss/helpers/_grid.scss
+++ b/source/scss/helpers/_grid.scss
@@ -1,7 +1,7 @@
 .container {
   @include clearfix();
   margin: 0 auto;
-  max-width: $media-large;
+  max-width: $grid-container;
   width: 90%;
 }
 
