--- a/source/scss/_colors.scss
+++ b/source/scss/_colors.scss
@@ -3,58 +3,61 @@
 $color: #686868;
 $color-bg: #fafafa;
 
-$color-headings: $color;
+$color-headings: #686868;
 
 // Links
 
 $color-link: #2980b9;
-$color-link-active: lighten($color-link, $amount);
-$color-link-hover: darken($color-link, $amount);
+$color-link-active: lighten($color-link, 10%);
+$color-link-hover: darken($color-link, 10%);
 
 $color-outline: $color-link;
 
 // Border
 
 $color-border: #808080;
-$color-border-hover: darken($color-border, $amount * 2);
+$color-border-hover: darken($color-border, 20%);
+
+// Typography
+
+$color-subline: #808080;
+
+// Layout
+
+$color-header: #686868;
+$color-header-bg: #fafafa;
+
+$color-footer: #686868;
+$color-footer-bg: #fafafa;
 
 // Buttons
 
 $color-btn: #fff;
 $color-btn-bg: #95a5a6;
 $color-btn-hover: #fff;
-$color-btn-hover-bg: darken($color-btn-bg, $amount);
+$color-btn-hover-bg: darken($color-btn-bg, 10%);
 
 $color-primary: $color-link;
-$color-primary-active: lighten($color-primary, $amount);
-$color-primary-hover: darken($color-primary, $amount);
+$color-primary-active: lighten($color-primary, 10%);
+$color-primary-hover: darken($color-primary, 10%);
 
 $color-secondary: #9b59b6;
-$color-secondary-active: lighten($color-secondary, $amount);
-$color-secondary-hover: darken($color-secondary, $amount);
+$color-secondary-active: lighten($color-secondary, 10%);
+$color-secondary-hover: darken($color-secondary, 10%);
 
 $color-success: #2ecc71;
-$color-success-active: lighten($color-success, $amount);
-$color-success-hover: darken($color-success, $amount);
+$color-success-active: lighten($color-success, 10%);
+$color-success-hover: darken($color-success, 10%);
 
 $color-warning: #f1c40f;
-$color-warning-active: lighten($color-warning, $amount);
-$color-warning-hover: darken($color-warning, $amount);
+$color-warning-active: lighten($color-warning, 10%);
+$color-warning-hover: darken($color-warning, 10%);
 
 $color-error: #e74c3c;
-$color-error-active: lighten($color-error, $amount);
-$color-error-hover: darken($color-error, $amount);
-
-// Layout
-
-$color-header-bg: #fafafa;
-$color-footer-bg: #fafafa;
+$color-error-active: lighten($color-error, 10%);
+$color-error-hover: darken($color-error, 10%);
 
 // Input
 
 $color-input: $color-bg;
 $color-input-bg: $color;
-
-// Typography
-
-$color-subline: #808080;
