--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,19 +1,19 @@
 // Fonts
 
-$font-family: 'Lato';
+$font-family: Arial;
 $font-family-fallback: sans-serif;
 $font-size: 1em;
 $font-weight: 400;
 
 $line-height: 1.5em;
 
-$font-family-headings: 'Lato';
-$font-size-h1: 32px;
-$font-size-h2: 24px;
-$font-size-h3: 20px;
-$font-size-h4: 16px;
-$font-size-h5: 14px;
-$font-size-h6: 12px;
+$font-family-headings: inherit;
+$font-size-h1: 2em;
+$font-size-h2: 1.5em;
+$font-size-h3: 1.25em;
+$font-size-h4: 1em;
+$font-size-h5: .875em;
+$font-size-h6: .75em;
 $font-weight-headings: 700;
 
 $font-size-headings: (
@@ -32,10 +32,6 @@ $font-family-code-fallback: monospace;
 
 $margin-element-bottom: 3em;
 
-// Adjustments
-
-$amount: 10%;
-
 $rtl: false;
 
 // Grid
@@ -46,10 +42,10 @@ $grid-container: 1248px;
 
 // Media Queries
 
-$media-tiny: 30em; // 480
-$media-small: 40em; // 640
-$media-medium: 60em; // 960
-$media-large: 78em; // 1248
+$media-tiny: 30em;
+$media-small: 40em;
+$media-medium: 60em;
+$media-large: 78em;
 
 // Paths
 
