--- a/source/scss/modules/_media.scss
+++ b/source/scss/modules/_media.scss
@@ -8,15 +8,15 @@
   }
 
   &-obj-left {
-    margin: 0 1em 1em 0;
+    margin: 0 1rem 1rem 0;
   }
 
   &-obj-right {
-    margin: 0 0 1em 1em;
+    margin: 0 0 1rem 1rem;
   }
 
   &-obj-above {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
   }
 
   &-body {
