--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -151,13 +151,13 @@ canvas {
 
 code {
   font-family: $font-family-code, $font-family-code-fallback;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 dialog {
   border: 0;
   display: none;
-  padding: 1em;
+  padding: 1rem;
 
   &::backdrop {
     background: rgba(0, 0, 0, .5);
@@ -211,8 +211,8 @@ footer {
   h#{$i} {
     @extend %headings;
     font-size: nth($font-size-headings, $i);
-    line-height: 1em + (1 / (nth($font-size-headings, $i) / .5em));
-    margin: 0 0 1em / (nth($font-size-headings, $i) / .5em) 0;
+    line-height: 1.2em;
+    margin: 0 0 .5rem;
   }
 
 }
@@ -222,7 +222,7 @@ hr {
   border: 0;
   box-sizing: content-box;
   height: 1px;
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
 }
 
 img {
@@ -307,7 +307,7 @@ label {
 legend {
   border: 0;
   display: block;
-  padding: 0 .25em;
+  padding: 0 .25rem;
   position: relative;
 }
 
@@ -320,14 +320,14 @@ dl,
 ol,
 ul {
   list-style-position: inside;
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
   padding: 0;
 
   dd,
   ol,
   ul {
-    margin: .5em 0 0;
-    padding-left: 1.5em;
+    margin: .5rem 0 0;
+    padding-left: 1.5rem;
   }
 
   dd {
@@ -335,13 +335,13 @@ ul {
   }
 
   li {
-    margin-bottom: .5em;
+    margin-bottom: .5rem;
   }
 
 }
 
 p {
-  margin: 0 0 .5em;
+  margin: 0 0 .5rem;
 }
 
 pre {
@@ -357,7 +357,7 @@ q {
 }
 
 small {
-  font-size: .75em;
+  font-size: .75rem;
 }
 
 summary {
@@ -370,18 +370,18 @@ summary {
 
 sub,
 sup {
-  font-size: .75em;
+  font-size: .75rem;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
 
 sup {
-  top: -.5em;
+  top: -.5rem;
 }
 
 sub {
-  bottom: -.25em;
+  bottom: -.25rem;
 }
 
 svg {
