--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -8,12 +8,12 @@ $font-weight: 400;
 $line-height: 1.5em;
 
 $font-family-headings: inherit;
-$font-size-h1: 2em;
-$font-size-h2: 1.5em;
-$font-size-h3: 1.25em;
-$font-size-h4: 1em;
-$font-size-h5: .875em;
-$font-size-h6: .75em;
+$font-size-h1: 2rem;
+$font-size-h2: 1.5rem;
+$font-size-h3: 1.25rem;
+$font-size-h4: 1rem;
+$font-size-h5: .875rem;
+$font-size-h6: .75rem;
 $font-weight-headings: 700;
 
 $font-size-headings: (
@@ -30,7 +30,7 @@ $font-family-code-fallback: monospace;
 
 // Spacing
 
-$margin-element-bottom: 3em;
+$margin-element-bottom: 3rem;
 
 $rtl: false;
 
@@ -38,14 +38,14 @@ $rtl: false;
 
 $grid-columns: 12;
 $grid-gutter: 2%;
-$grid-container: 1248px;
+$grid-container: 78rem;
 
 // Media Queries
 
-$media-tiny: 30em;
-$media-small: 40em;
-$media-medium: 60em;
-$media-large: 78em;
+$media-tiny: 30rem;
+$media-small: 40rem;
+$media-medium: 60rem;
+$media-large: 78rem;
 
 // Paths
 
