--- a/source/scss/helpers/_icons.scss
+++ b/source/scss/helpers/_icons.scss
@@ -4,15 +4,15 @@
 
 .icon {
   display: inline-block;
-  height: 1em;
+  height: 1rem;
   vertical-align: middle;
-  width: 1em;
+  width: 1rem;
 }
 
 @for $i from 2 through 4 {
 
   .icon-#{$i}x {
-    font-size: 1em * $i;
+    font-size: 1rem * $i;
   }
 
 }
