--- a/source/scss/modules/_articles.scss
+++ b/source/scss/modules/_articles.scss
@@ -11,7 +11,7 @@ article {
   ol,
   ul,
   table {
-    margin-bottom: 1.5em;
+    margin-bottom: 1.5rem;
 
     &:last-child {
       margin-bottom: 0;
@@ -20,11 +20,11 @@ article {
   }
 
   li {
-    margin-bottom: .5em;
+    margin-bottom: .5rem;
 
     ol,
     ul {
-      margin-top: .5em;
+      margin-top: .5rem;
     }
 
   }
