--- a/source/scss/modules/_buttons.scss
+++ b/source/scss/modules/_buttons.scss
@@ -2,7 +2,7 @@
   background: $color-btn-bg;
   color: $color-btn;
   display: inline-block;
-  padding: .5em 1em;
+  padding: .5rem 1rem;
 
   &:hover {
     background: $color-btn-hover-bg;
@@ -10,20 +10,20 @@
   }
 
   &-large {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
   &-small {
-    font-size: .75em;
+    font-size: .75rem;
   }
 
   &-rounded {
-    border-radius: .5em;
+    border-radius: .5rem;
   }
 
   &-pill {
-    border-radius: 1em;
-    padding: .25em 1em;
+    border-radius: 1rem;
+    padding: .25rem 1rem;
   }
 
   &-full {
