--- a/source/scss/modules/_forms.scss
+++ b/source/scss/modules/_forms.scss
@@ -2,12 +2,12 @@
   margin-bottom: $margin-element-bottom;
 
   fieldset {
-    margin: -.5em 0;
+    margin: -.5rem 0;
   }
 
   &-field {
     @include clearfix();
-    padding: .5em 0;
+    padding: .5rem 0;
   }
 
   select,
@@ -15,7 +15,7 @@
   .input-text {
     border: 1px solid $color-border;
     height: $line-height + (.25em * 2);
-    padding: .25em .5em;
+    padding: .25rem .5rem;
     width: 100%;
 
     &:hover {
@@ -27,7 +27,7 @@
   .input-checkbox,
   .input-radio {
     float: left;
-    margin: .25em .5em 0 0;
+    margin: .25rem .5rem 0 0;
   }
 
   .checkbox-container,
@@ -53,7 +53,7 @@
   .input-reset,
   .input-submit {
     background-color: $color-primary;
-    padding: .25em 1em;
+    padding: .25rem 1rem;
 
     &:hover {
       background-color: $color-primary-hover;
@@ -72,7 +72,7 @@
       .input-checkbox,
       .input-radio {
         float: right;
-        margin: .25em 0 0 .5em;
+        margin: .25rem 0 0 .5rem;
       }
 
       .checkbox-container,
