--- a/source/scss/modules/_gallery.scss
+++ b/source/scss/modules/_gallery.scss
@@ -4,11 +4,11 @@
   .images {
     @include clearfix();
     @include list-unstyled();
-    margin: -.25em;
+    margin: -.25rem;
 
     li {
       float: left;
-      padding: .25em;
+      padding: .25rem;
       width: (100% / 2);
 
       @media (min-width: $media-tiny) {
