--- a/source/css/style.css
+++ b/source/css/style.css
@@ -434,7 +434,8 @@ article {
 .breadcrumb ul {
   list-style: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  margin: 0 -.5rem; }
   .breadcrumb ul:before, .breadcrumb ul:after {
     content: ' ';
     display: table; }
