--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -271,7 +271,7 @@ select {
 textarea {
   max-width: 100%;
   overflow: auto;
-  resize: vertical;
+  resize: none;
   vertical-align: top;
   width: 100%;
 }
