--- a/source/css/style.css
+++ b/source/css/style.css
@@ -400,8 +400,7 @@ article {
   .btn-rounded {
     border-radius: .5rem; }
   .btn-pill {
-    border-radius: 1rem;
-    padding: .25rem 1rem; }
+    border-radius: 9999px; }
   .btn-full {
     display: block;
     padding-left: 0;
