tweak media queries and add comments to beakpint sizes

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -42,10 +42,11 @@ $grid-container: 78rem;
 
 // Media Queries
 
-$media-tiny: 30rem;
-$media-small: 40rem;
-$media-medium: 60rem;
-$media-large: 78rem;
+$media-micro: 20rem; // 320
+$media-tiny: 30rem; // 480
+$media-small: 40rem; // 640
+$media-medium: 60rem; // 960
+$media-large: 80rem; // 1280
 
 // Paths
 
