BEM architecture - fix #14

--- a/source/scss/helpers/_animations.scss
+++ b/source/scss/helpers/_animations.scss
@@ -1,8 +1,9 @@
 .animate {
   animation-duration: 1s;
   animation-fill-mode: both;
-}
 
-.animate-infinite {
-  animation-iteration-count: infinite;
+  &--infinite {
+    animation-iteration-count: infinite;
+  }
+
 }
