--- a/source/css/style.css
+++ b/source/css/style.css
@@ -397,39 +397,39 @@ article {
   .btn:focus, .btn:hover {
     background: #798d8f;
     color: #fff; }
-  .btn-large {
+  .btn--large {
     font-size: 2rem; }
-  .btn-small {
+  .btn--small {
     font-size: .75rem; }
-  .btn-rounded {
+  .btn--rounded {
     border-radius: .5rem; }
-  .btn-pill {
+  .btn--pill {
     border-radius: 9999px; }
-  .btn-full {
+  .btn--full {
     display: block;
     padding-left: 0;
     padding-right: 0;
     text-align: center;
     width: 100%; }
-  .btn-primary {
+  .btn--primary {
     background: #2980b9; }
-    .btn-primary:focus, .btn-primary:hover {
+    .btn--primary:focus, .btn--primary:hover {
       background: #20638f; }
-  .btn-secondary {
+  .btn--secondary {
     background: #9b59b6; }
-    .btn-secondary:focus, .btn-secondary:hover {
+    .btn--secondary:focus, .btn--secondary:hover {
       background: #804399; }
-  .btn-success {
+  .btn--success {
     background: #2ecc71; }
-    .btn-success:focus, .btn-success:hover {
+    .btn--success:focus, .btn--success:hover {
       background: #25a25a; }
-  .btn-warning {
+  .btn--warning {
     background: #f1c40f; }
-    .btn-warning:focus, .btn-warning:hover {
+    .btn--warning:focus, .btn--warning:hover {
       background: #c29d0b; }
-  .btn-error {
+  .btn--error {
     background: #e74c3c; }
-    .btn-error:focus, .btn-error:hover {
+    .btn--error:focus, .btn--error:hover {
       background: #d62c1a; }
 
 .breadcrumb ul {
@@ -454,12 +454,12 @@ article {
   margin-bottom: 3rem; }
   .form fieldset {
     margin: -.5rem 0; }
-  .form-field {
+  .form__field {
     padding: .5rem 0; }
-    .form-field:before, .form-field:after {
+    .form__field:before, .form__field:after {
       content: ' ';
       display: table; }
-    .form-field:after {
+    .form__field:after {
       clear: both; }
   .form select,
   .form textarea,
@@ -539,16 +539,16 @@ article {
   display: table; }
 .media:after {
   clear: both; }
-.media-obj-left, .media-obj-right {
+.media__obj--left, .media__obj--right {
   max-width: 50%;
   width: auto; }
-.media-obj-left {
-  margin: 0 1rem 1rem 0; }
-.media-obj-right {
-  margin: 0 0 1rem 1rem; }
-.media-obj-above {
+.media__obj--above {
   margin-bottom: 1rem; }
-.media-body {
+.media__obj--left {
+  margin: 0 1rem 1rem 0; }
+.media__obj--right {
+  margin: 0 0 1rem 1rem; }
+.media__body {
   overflow: hidden; }
 
 .nav ul {
@@ -561,20 +561,20 @@ article {
   position: relative; }
 .nav a {
   display: block; }
-.nav-horizontal > ul:before, .nav-horizontal > ul:after {
+.nav--horizontal > ul:before, .nav--horizontal > ul:after {
   content: ' ';
   display: table; }
-.nav-horizontal > ul:after {
+.nav--horizontal > ul:after {
   clear: both; }
-.nav-horizontal > ul > li {
+.nav--horizontal > ul > li {
   float: left; }
-.nav-dropdown li:focus ul, .nav-dropdown li:hover ul {
+.nav--dropdown li:focus ul, .nav--dropdown li:hover ul {
   display: block; }
-.nav-dropdown li ul {
+.nav--dropdown li ul {
   display: none;
   position: absolute; }
 @media (min-width: 40rem) {
-  .nav-btn {
+  .nav__btn {
     display: none; } }
 
 .pagination {
@@ -670,9 +670,8 @@ article {
 .animate {
   animation-duration: 1s;
   animation-fill-mode: both; }
-
-.animate-infinite {
-  animation-iteration-count: infinite; }
+  .animate--infinite {
+    animation-iteration-count: infinite; }
 
 .container {
   margin: 0 auto;
@@ -693,192 +692,192 @@ article {
   .row:after {
     clear: both; }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+.col--1, .col--2, .col--3, .col--4, .col--5, .col--6, .col--7, .col--8, .col--9, .col--10, .col--11, .col--12 {
   float: left;
   height: auto;
   min-height: 1px;
   padding-left: 1%;
   padding-right: 1%; }
 
-.col-1 {
+.col--1 {
   width: 8.33333%; }
 
-.col-2 {
+.col--2 {
   width: 16.66667%; }
 
-.col-3 {
+.col--3 {
   width: 25%; }
 
-.col-4 {
+.col--4 {
   width: 33.33333%; }
 
-.col-5 {
+.col--5 {
   width: 41.66667%; }
 
-.col-6 {
+.col--6 {
   width: 50%; }
 
-.col-7 {
+.col--7 {
   width: 58.33333%; }
 
-.col-8 {
+.col--8 {
   width: 66.66667%; }
 
-.col-9 {
+.col--9 {
   width: 75%; }
 
-.col-10 {
+.col--10 {
   width: 83.33333%; }
 
-.col-11 {
+.col--11 {
   width: 91.66667%; }
 
-.col-12 {
+.col--12 {
   width: 100%; }
 
 @media (min-width: 41rem) and (max-width: 60rem) {
-  .col-1-md {
+  .col--1--md {
     width: 8.33333%; }
 
-  .col-2-md {
+  .col--2--md {
     width: 16.66667%; }
 
-  .col-3-md {
+  .col--3--md {
     width: 25%; }
 
-  .col-4-md {
+  .col--4--md {
     width: 33.33333%; }
 
-  .col-5-md {
+  .col--5--md {
     width: 41.66667%; }
 
-  .col-6-md {
+  .col--6--md {
     width: 50%; }
 
-  .col-7-md {
+  .col--7--md {
     width: 58.33333%; }
 
-  .col-8-md {
+  .col--8--md {
     width: 66.66667%; }
 
-  .col-9-md {
+  .col--9--md {
     width: 75%; }
 
-  .col-10-md {
+  .col--10--md {
     width: 83.33333%; }
 
-  .col-11-md {
+  .col--11--md {
     width: 91.66667%; }
 
-  .col-12-md {
+  .col--12--md {
     width: 100%; } }
 @media (min-width: 31rem) and (max-width: 40rem) {
-  .col-1-sm {
+  .col--1--sm {
     width: 8.33333%; }
 
-  .col-2-sm {
+  .col--2--sm {
     width: 16.66667%; }
 
-  .col-3-sm {
+  .col--3--sm {
     width: 25%; }
 
-  .col-4-sm {
+  .col--4--sm {
     width: 33.33333%; }
 
-  .col-5-sm {
+  .col--5--sm {
     width: 41.66667%; }
 
-  .col-6-sm {
+  .col--6--sm {
     width: 50%; }
 
-  .col-7-sm {
+  .col--7--sm {
     width: 58.33333%; }
 
-  .col-8-sm {
+  .col--8--sm {
     width: 66.66667%; }
 
-  .col-9-sm {
+  .col--9--sm {
     width: 75%; }
 
-  .col-10-sm {
+  .col--10--sm {
     width: 83.33333%; }
 
-  .col-11-sm {
+  .col--11--sm {
     width: 91.66667%; }
 
-  .col-12-sm {
+  .col--12--sm {
     width: 100%; } }
 @media (max-width: 40rem) {
-  .col-1 {
+  .col--1 {
     width: 100%; }
 
-  .col-2 {
+  .col--2 {
     width: 100%; }
 
-  .col-3 {
+  .col--3 {
     width: 100%; }
 
-  .col-4 {
+  .col--4 {
     width: 100%; }
 
-  .col-5 {
+  .col--5 {
     width: 100%; }
 
-  .col-6 {
+  .col--6 {
     width: 100%; }
 
-  .col-7 {
+  .col--7 {
     width: 100%; }
 
-  .col-8 {
+  .col--8 {
     width: 100%; }
 
-  .col-9 {
+  .col--9 {
     width: 100%; }
 
-  .col-10 {
+  .col--10 {
     width: 100%; }
 
-  .col-11 {
+  .col--11 {
     width: 100%; }
 
-  .col-12 {
+  .col--12 {
     width: 100%; } }
 @media (max-width: 30rem) {
-  .col-1-xs {
+  .col--1--xs {
     width: 8.33333%; }
 
-  .col-2-xs {
+  .col--2--xs {
     width: 16.66667%; }
 
-  .col-3-xs {
+  .col--3--xs {
     width: 25%; }
 
-  .col-4-xs {
+  .col--4--xs {
     width: 33.33333%; }
 
-  .col-5-xs {
+  .col--5--xs {
     width: 41.66667%; }
 
-  .col-6-xs {
+  .col--6--xs {
     width: 50%; }
 
-  .col-7-xs {
+  .col--7--xs {
     width: 58.33333%; }
 
-  .col-8-xs {
+  .col--8--xs {
     width: 66.66667%; }
 
-  .col-9-xs {
+  .col--9--xs {
     width: 75%; }
 
-  .col-10-xs {
+  .col--10--xs {
     width: 83.33333%; }
 
-  .col-11-xs {
+  .col--11--xs {
     width: 91.66667%; }
 
-  .col-12-xs {
+  .col--12--xs {
     width: 100%; } }
 .icons {
   display: none; }
@@ -889,13 +888,13 @@ article {
   vertical-align: middle;
   width: 1rem; }
 
-.icon-2x {
+.icon--2x {
   font-size: 2rem; }
 
-.icon-3x {
+.icon--3x {
   font-size: 3rem; }
 
-.icon-4x {
+.icon--4x {
   font-size: 4rem; }
 
 .center-block {
