--- a/source/css/style.css
+++ b/source/css/style.css
@@ -47,7 +47,7 @@ html {
 body {
   background: #fafafa;
   color: #686868;
-  font: 400 1em/1.5em Arial, sans-serif;
+  font: 400 1rem/1.5em Arial, sans-serif;
   height: 100%;
   margin: 0;
   position: relative; }
@@ -215,7 +215,7 @@ textarea {
   border: 0;
   border-radius: 0;
   color: inherit;
-  font: 400 1em/1.5em Arial, sans-serif;
+  font: 400 1rem/1.5em Arial, sans-serif;
   margin: 0;
   outline-color: #2980b9;
   padding: 0;
