--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -35,7 +35,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  font-size: 100%;
+  font-size: $root-font-size;
   height: 100%;
   text-rendering: optimizeLegibility;
 }
