--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,8 +1,10 @@
 // Fonts
 
+$root-font-size: 100%;
+
 $font-family: Arial;
 $font-family-fallback: sans-serif;
-$font-size: 1em;
+$font-size: 1rem;
 $font-weight: 400;
 
 $line-height: 1.5em;
