--- a/source/scss/helpers/_icons.scss
+++ b/source/scss/helpers/_icons.scss
@@ -4,9 +4,9 @@
 
 .icon {
   display: inline-block;
-  height: 1rem;
+  height: 1em;
   vertical-align: middle;
-  width: 1rem;
+  width: 1em;
 }
 
 @for $i from 2 through 4 {
